--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
 
 <body>
   <header>
-    <h1><a href=".">TODO: Your project name</a></h1>
+    <h1><a href=".">Seattle Under Inflation: A Visual Analysis of Real Wages Consumption and Cost of Living</a></h1>
 
     <p>
-      <strong>Team Members</strong>: [TODO] team member #1, team member #2, team member #3, team member #4
+      <strong>Team Members</strong>: Chi Zhang, Vincent Chen
     </p>
   </header>
 
