--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       </li>
       <li>
         <strong>Section 2 – What’s Driving the Cost of Living?</strong><br>
-        <em>Goal:</em> Break down which components—housing, food, transportation—are contributing most to cost increases.<br>
+        <em>Goal:</em> Break down which components - housing, food, transportation - are contributing most to cost increases.<br>
         <em>Approach:</em> Stacked area charts and interactive category filters will highlight disparities in price growth.
       </li>
       <li>
@@ -70,7 +70,7 @@
     <h3>Outcome</h3>
     
     <p>
-      By transforming complex datasets into clear, accessible visuals, this dashboard will help policymakers, researchers, and residents alike understand the evolving economics of living in Seattle. The result is not just a collection of charts—but a narrative about affordability and economic resilience in the face of inflation.
+      By transforming complex datasets into clear, accessible visuals, this dashboard will help policymakers, researchers, and residents alike understand the evolving economics of living in Seattle. The result is not just a collection of charts — but a narrative about affordability and economic resilience in the face of inflation.
     </p>
     
   </section>
