--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,22 @@
     });
     </script>
 
+    <p>
+      This visualization explores the rising cost of living in the Seattle-Tacoma-Bellevue area by examining the Consumer Price Index (CPI) trends across major spending categories. The data comes from the U.S. Bureau of Labor Statistics (BLS), specifically the CPI database filtered for the Seattle metropolitan area. Categories include Housing, Transportation, Food and Beverage, Medical, Recreation, and others—each reflecting essential components of a typical household's budget.
+    </p>
+
+    <p>
+      To effectively communicate the magnitude and variation of inflation across these components, a stacked area chart is used. This technique not only displays the cumulative impact of inflation over time but also distinguishes category-specific contributions to the overall index. 
+    </p>
+
+    <p>
+      The chart also features interactive highlighting. When users hover over or click on a legend category, the corresponding area is emphasized while others fade to the background. This interaction allows for focused exploration and better comparison of how individual categories have evolved. Additionally, the chart title updates dynamically to reflect the selected category, enhancing interpretability.
+    </p>
+
+    <p>
+      Through this design, users gain both a macro and micro view of cost growth—providing context for how different inflation drivers may impact residents differently depending on their consumption patterns.
+    </p>
+
   </section>
 
 
