--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <section>
     <h2>Introduction</h2>
     <p>
-      Over the past two decades, rising inflation has reshaped the financial realities of everyday life—especially in rapidly growing urban centers like Seattle. While wage growth is frequently cited as a marker of economic prosperity, it often fails to keep pace with the soaring costs of essentials such as housing, transportation, and food. This growing disconnect between nominal income and actual purchasing power raises a critical question: <strong>Is life really more affordable today than it was twenty years ago?</strong>
+      Over the past two decades, rising inflation has reshaped the financial realities of everyday life — especially in rapidly growing urban centers like Seattle. While wage growth is frequently cited as a marker of economic prosperity, it often fails to keep pace with the soaring costs of essentials such as housing, transportation, and food. This growing disconnect between nominal income and actual purchasing power raises a critical question: <strong>Is life really more affordable today than it was twenty years ago?</strong>
     </p>
     
     <p>
@@ -99,7 +99,7 @@
     </script>
 
     <p>
-      This visualization explores the rising cost of living in the Seattle-Tacoma-Bellevue area by examining the Consumer Price Index (CPI) trends across major spending categories. The data comes from the U.S. Bureau of Labor Statistics (BLS), specifically the CPI database filtered for the Seattle metropolitan area. Categories include Housing, Transportation, Food and Beverage, Medical, Recreation, and others—each reflecting essential components of a typical household's budget.
+      This visualization explores the rising cost of living in the Seattle-Tacoma-Bellevue area by examining the Consumer Price Index (CPI) trends across major spending categories. The data comes from the U.S. Bureau of Labor Statistics (BLS), specifically the CPI database filtered for the Seattle metropolitan area. Categories include Housing, Transportation, Food and Beverage, Medical, Recreation, and others — each reflecting essential components of a typical household's budget.
     </p>
 
     <p>
@@ -111,11 +111,59 @@
     </p>
 
     <p>
-      Through this design, users gain both a macro and micro view of cost growth—providing context for how different inflation drivers may impact residents differently depending on their consumption patterns.
+      Through this design, users gain both a macro and micro view of cost growth — providing context for how different inflation drivers may impact residents differently depending on their consumption patterns.
     </p>
 
   </section>
 
+  <section>
+    <h2>Section 3: Affordability Over Time</h2>
+    <div id="observablehq-mySection3Viz-06edb9e7"></div>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/58fd8929c1e857a6@235.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
+    new Runtime().module(define, name => {
+      if (name === "mySection3Viz") return new Inspector(document.querySelector("#observablehq-mySection3Viz-06edb9e7"));
+    });
+    </script>
+
+    <div id="observablehq-myEggInteractiveChart-e5ceb4dd"></div>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/58fd8929c1e857a6@235.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
+    new Runtime().module(define, name => {
+      if (name === "myEggInteractiveChart") return new Inspector(document.querySelector("#observablehq-myEggInteractiveChart-e5ceb4dd"));
+    });
+    </script>
+
+    <div id="observablehq-myGasInteractiveChart-f90dcfa0"></div>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/58fd8929c1e857a6@235.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
+    new Runtime().module(define, name => {
+      if (name === "myGasInteractiveChart") return new Inspector(document.querySelector("#observablehq-myGasInteractiveChart-f90dcfa0"));
+    });
+    </script>
+
+    <div id="observablehq-myRentInteractiveChart-24bf6017"></div>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/58fd8929c1e857a6@235.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
+    new Runtime().module(define, name => {
+      if (name === "myRentInteractiveChart") return new Inspector(document.querySelector("#observablehq-myRentInteractiveChart-24bf6017"));
+    });
+    </script>
+
+  </section>
+    
 
 
   <footer>
