--- a/public/index.html
+++ b/public/index.html
@@ -199,7 +199,7 @@
         <div id="observablehq-mySection3Viz-06edb9e7"></div>
         <script type="module">
           import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-          import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=YOUR_KEY";
+          import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
           new Runtime().module(define, name => {
             if (name === "mySection3Viz") return new Inspector(document.querySelector("#observablehq-mySection3Viz-06edb9e7"));
           });
@@ -212,7 +212,7 @@
           <div id="observablehq-myEggInteractiveChart-e5ceb4dd"></div>
           <script type="module">
             import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-            import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=YOUR_KEY";
+            import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
             new Runtime().module(define, name => {
               if (name === "myEggInteractiveChart") return new Inspector(document.querySelector("#observablehq-myEggInteractiveChart-e5ceb4dd"));
             });
@@ -223,7 +223,7 @@
           <div id="observablehq-myGasInteractiveChart-f90dcfa0"></div>
           <script type="module">
             import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-            import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=YOUR_KEY";
+            import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
             new Runtime().module(define, name => {
               if (name === "myGasInteractiveChart") return new Inspector(document.querySelector("#observablehq-myGasInteractiveChart-f90dcfa0"));
             });
@@ -234,7 +234,7 @@
           <div id="observablehq-myRentInteractiveChart-24bf6017"></div>
           <script type="module">
             import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-            import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=YOUR_KEY";
+            import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
             new Runtime().module(define, name => {
               if (name === "myRentInteractiveChart") return new Inspector(document.querySelector("#observablehq-myRentInteractiveChart-24bf6017"));
             });
@@ -243,6 +243,7 @@
       </div>
     </div>
   </section>
+  
   
 
 
