--- a/public/index.html
+++ b/public/index.html
@@ -116,8 +116,6 @@
 
   </section>
 
-  
-
   <section>
     <h2>Section 3: Affordability Over Time</h2>
   
@@ -151,6 +149,7 @@
       <!-- Main chart (left side) -->
       <div class="left-viz viz-box">
         <div id="observablehq-mySection3Viz-06edb9e7"></div>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
         <script type="module">
           import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
           import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
@@ -164,6 +163,7 @@
       <div class="right-viz">
         <div class="viz-box">
           <div id="observablehq-myEggInteractiveChart-e5ceb4dd"></div>
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
           <script type="module">
             import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
             import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
@@ -175,6 +175,7 @@
   
         <div class="viz-box">
           <div id="observablehq-myGasInteractiveChart-f90dcfa0"></div>
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
           <script type="module">
             import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
             import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
@@ -186,6 +187,7 @@
   
         <div class="viz-box">
           <div id="observablehq-myRentInteractiveChart-24bf6017"></div>
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
           <script type="module">
             import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
             import define from "https://api.observablehq.com/d/58fd8929c1e857a6.js?v=4&api_key=886942663c56148c28d7714634365ea63297b778";
