--- a/public/index.html
+++ b/public/index.html
@@ -120,18 +120,23 @@
     <h2>Section 3: Affordability Over Time</h2>
   
     <style>
+      .viz-wrapper {
+        max-width: 1200px;
+        margin: auto;
+      }
+  
       .viz-container {
         display: flex;
-        flex-direction: row;
+        flex-wrap: wrap;
         gap: 20px;
       }
   
       .left-viz {
-        flex: 2;
+        flex: 2 1 600px;
       }
   
       .right-viz {
-        flex: 1;
+        flex: 1 1 300px;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -143,7 +148,21 @@
         border-radius: 6px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
       }
-    </style>
+  
+      @media (max-width: 900px) {
+        .viz-container {
+          flex-direction: column;
+        }
+        .right-viz {
+          flex-direction: row;
+          flex-wrap: wrap;
+          justify-content: space-between;
+        }
+        .right-viz .viz-box {
+          flex: 1 1 45%;
+        }
+      }
+    </style>  
   
     <div class="viz-container">
       <!-- Main chart (left side) -->
