--- a/public/index.html
+++ b/public/index.html
@@ -127,16 +127,17 @@
   
       .viz-container {
         display: flex;
-        flex-wrap: wrap;
         gap: 20px;
+        align-items: flex-start;
+        flex-wrap: nowrap;
       }
   
       .left-viz {
-        flex: 2 1 600px;
+        flex: 2;
       }
   
       .right-viz {
-        flex: 1 1 300px;
+        flex: 1;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -149,17 +150,13 @@
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
       }
   
-      @media (max-width: 900px) {
+      @media (max-width: 1024px) {
         .viz-container {
           flex-direction: column;
         }
-        .right-viz {
-          flex-direction: row;
-          flex-wrap: wrap;
-          justify-content: space-between;
-        }
-        .right-viz .viz-box {
-          flex: 1 1 45%;
+  
+        .left-viz, .right-viz {
+          width: 100%;
         }
       }
     </style>
