--- a/public/index.html
+++ b/public/index.html
@@ -121,33 +121,24 @@
   
     <style>
       .viz-wrapper {
-        max-width: 100%;
+        max-width: 1200px;
         margin: auto;
         padding: 0 20px;
       }
   
-      .viz-container {
+      .viz-top {
+        margin-bottom: 30px;
+      }
+  
+      .viz-row {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 20px;
         flex-wrap: wrap;
-      }
-  
-      .left-viz {
-        flex: 2;
-        min-width: 600px;
-      }
-  
-      .right-viz {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
         gap: 20px;
-        min-width: 320px;
       }
   
       .viz-box {
+        flex: 1;
+        min-width: 300px;
         background-color: #fff;
         padding: 10px;
         border-radius: 6px;
@@ -155,31 +146,15 @@
       }
   
       @media (max-width: 900px) {
-        .viz-container {
+        .viz-row {
           flex-direction: column;
-        }
-  
-        .left-viz,
-        .right-viz {
-          width: 100%;
-        }
-  
-        .right-viz {
-          flex-direction: row;
-          flex-wrap: wrap;
-          justify-content: space-between;
-        }
-  
-        .right-viz .viz-box {
-          width: 48%;
         }
       }
     </style>
   
   
-    <div class="viz-container">
-      <!-- Main chart (left side) -->
-      <div class="left-viz viz-box">
+    <div class="viz-wrapper">
+      <div class="viz-top viz-box">
         <div id="observablehq-mySection3Viz-06edb9e7"></div>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
         <script type="module">
@@ -191,8 +166,7 @@
         </script>
       </div>
   
-      <!-- Stacked charts (right side) -->
-      <div class="right-viz">
+      <div class="viz-row">
         <div class="viz-box">
           <div id="observablehq-myEggInteractiveChart-e5ceb4dd"></div>
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
