--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
     </script>
 
     <p>
-      This visualization explores the rising cost of living in the Seattle-Tacoma-Bellevue area by examining the Consumer Price Index (CPI) trends across major spending categories. The data comes from the U.S. Bureau of Labor Statistics (BLS) (https://www.bls.gov/cpi/), specifically the CPI database filtered for the Seattle metropolitan area. Categories include Housing, Transportation, Food and Beverage, Medical, Recreation, and others — each reflecting essential components of a typical household's budget.
+      This visualization explores the rising cost of living in the Seattle-Tacoma-Bellevue area by examining the Consumer Price Index (CPI) trends across major spending categories from 2015 to 2024. The data comes from the U.S. Bureau of Labor Statistics (BLS) (https://www.bls.gov/cpi/), specifically the CPI database filtered for the Seattle metropolitan area. Categories include Housing, Transportation, Food and Beverage, Medical, Recreation, and others — each reflecting essential components of a typical household's budget.
     </p>
 
     <p>
