--- a/public/index.html
+++ b/public/index.html
@@ -219,9 +219,9 @@
         From these data sources, three conversion metrics are calculated to provide context for affordability:
       </p>
       <ul>
-        <li><strong>CPI_Eggs_convertion:</strong> Calculated as <code>hourly wage / egg price</code>, indicating how many dozens of eggs a person can buy with one hour of work.</li>
-        <li><strong>Rent_convertion:</strong> Calculated as <code>monthly rent / hourly wage</code>, indicating how many hours of work are required to pay for one month of rent.</li>
-        <li><strong>Gasoline_convertion:</strong> Calculated as <code>hourly wage / gasoline price</code>, indicating how many gallons of gasoline one can purchase with one hour of work.</li>
+        <li><strong>CPI_Eggs_convertion:</strong> Calculated as hourly wage / egg price, indicating how many dozens of eggs a person can buy with one hour of work.</li>
+        <li><strong>Rent_convertion:</strong> Calculated as monthly rent / hourly wage, indicating how many hours of work are required to pay for one month of rent.</li>
+        <li><strong>Gasoline_convertion:</strong> Calculated as hourly wage / gasoline price, indicating how many gallons of gasoline one can purchase with one hour of work.</li>
       </ul>
       <p>
         It's important to note that the egg price data reflects a national average, while the wage, rent, and gasoline data are specific to the Seattle-Tacoma-Bellevue metropolitan area.
