--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
     </p>
 
     <p>
-      The chart also features interactive highlighting. When users hover over or click on a legend category, the corresponding area is emphasized while others fade to the background. This interaction allows for focused exploration and better comparison of how individual categories have evolved. Additionally, the chart title updates dynamically to reflect the selected category, enhancing interpretability.
+      The chart also features interactive highlighting. When users hover over or click on a legend category, the corresponding area is emphasized while others fade to the background. This interaction allows for focused exploration and better comparison of how individual categories have evolved.
     </p>
 
     <p>
