--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,16 @@
 
   <section>
     <h2>Section 1: Real Wages in Seattle</h2>
+    <div id="observablehq-cpiChart-ef0f77c7"></div>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/bcb9c5b93f96c770@59.js?v=4&api_key=5dca21144c760d04819bbe62a78cf84f4a0fb9da";
+    new Runtime().module(define, name => {
+      if (name === "cpiChart") return new Inspector(document.querySelector("#observablehq-cpiChart-ef0f77c7"));
+    });
+  </script>
 
   </section>
 
