--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,52 @@
     </script>
 
   <section>
+    <h2>Section 1: Seattle Wages and Cost of Living – Data Summary & Visualization Goals</h2>
+
+    <p>
+      In this section, we explore the evolving economic conditions for residents of Seattle from 2015 to 2024, focusing on two key indicators: wages and the Consumer Price Index (CPI).
+    </p>
+
+    <p>
+      The wage dataset includes both mean and median annual wages in Seattle, represented in two forms:
+    </p>
+
+    <ul>
+      <li><strong>Nominal wages</strong>, which reflect raw earnings without adjustment</li>
+      <li><strong>Real wages</strong>, which are adjusted for inflation using the Consumer Price Index (CPI), and thus represent the true purchasing power over time</li>
+    </ul>
+
+    <p>
+      By separating mean and median wages, we aim to capture changes in overall wage levels (mean) and shifts in wage distribution (median), which is especially important in a city like Seattle with rapidly rising housing costs and tech-driven income stratification.
+    </p>
+
+    <p>
+      The Seattle CPI dataset tracks the local cost of living each year, with 2014 as the baseline (CPI = 100). It provides a lens into how inflation and rising prices—especially in housing, transportation, and food—have shaped the real value of income in the region.
+    </p>
+
+    <h3>Visualization Objectives</h3>
+
+    <p>We present three interactive charts:</p>
+
+    <ul>
+      <li><strong>Mean Wage (Nominal vs. Real)</strong><br>
+        Shows how the purchasing power of average wages has changed over time, revealing stagnation or decline in real wages.
+      </li>
+      <li><strong>Median Wage (Nominal vs. Real)</strong><br>
+        Offers insight into the experience of the “typical” worker, and how income distribution may not have kept pace with inflation.
+      </li>
+      <li><strong>Seattle CPI Over Time</strong><br>
+        Illustrates how the cost of living has grown, providing essential context for interpreting wage trends.
+      </li>
+    </ul>
+
+    <p>
+      Each chart includes interactive tooltips and hover features to help users closely examine the temporal patterns and compare nominal vs. real trends.
+    </p>
+  </section>
+
+
+  <section>
     <h2>Section 2: What is Driving the Cost of Living?</h2>
 
 
