--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
 
   <section>
     <h2>Section 1: Real Wages in Seattle</h2>
+    <h3>Seattle CPI through Years</h3>
     <div id="observablehq-cpiChart-0d189978"></div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
@@ -90,7 +91,7 @@
     </script>
 
   </section>
-  
+    <h3>Mean Vs. Median</h3>
     <div id="observablehq-meanWageChart-36eae5c4"></div>
     <div id="observablehq-meidanWageChart-36eae5c4"></div>
 
@@ -327,10 +328,57 @@
     });
     </script>
 
+    <h3>Cross-City Mean Wage Comparison</h3>
+    <div id="observablehq-multi_meanWage-4fd0aa6f"></div>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+    <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/bcb9c5b93f96c770@142.js?v=4&api_key=5dca21144c760d04819bbe62a78cf84f4a0fb9da";
+    new Runtime().module(define, name => {
+      if (name === "multi_meanWage") return new Inspector(document.querySelector("#observablehq-multi_meanWage-4fd0aa6f"));
+    });
+    </script>
 
   </section>
   
+  <section>
+    <h3>Write-up: Wage Growth vs. Cost of Living – A Multi-City Comparison</h3>
   
+    <p>
+      To contextualize Seattle’s wage and cost of living trends, we compare them against three major metropolitan areas: <strong>San Francisco</strong>, <strong>New York City</strong>, and <strong>Chicago</strong>. These cities are selected based on their population size, economic impact, and high urban living costs.
+    </p>
+  
+    <p>
+      The first chart shows each city's <strong>Consumer Price Index (CPI)</strong> from 2015 to 2024, reflecting how the cost of living has evolved. San Francisco and Seattle exhibit the most dramatic CPI increases, indicating substantial inflationary pressure in these areas. Meanwhile, Chicago maintains the slowest growth in living costs throughout the period.
+    </p>
+  
+    <p>
+      The second chart tracks <strong>annual mean wages</strong> over the same period. San Francisco consistently leads in nominal income levels, while Seattle experiences significant wage growth, especially after 2020. Notably, Chicago remains the lowest in both wage and CPI, suggesting relatively stable affordability.
+    </p>
+  
+    <h3>Key Insights</h3>
+    <ul>
+      <li>Seattle’s wage growth appears to <strong>keep pace with its rising CPI</strong>, suggesting partial income-cost alignment.</li>
+      <li>San Francisco shows both the <strong>highest wage levels and cost of living</strong>, raising questions about net affordability.</li>
+      <li>New York maintains a moderate position in both metrics, showing stability rather than volatility.</li>
+      <li>Chicago continues to offer the <strong>lowest cost of living</strong> with steady wage growth, making it potentially more affordable overall.</li>
+    </ul>
+  
+    <h4>Further Improvements</h4>
+    <ul>
+      <li><strong>Inflation-adjusted wages:</strong> Incorporate real wages using CPI normalization to show purchasing power over time.</li>
+      <li><strong>Normalized CPI chart:</strong> Use a stacked or normalized chart to emphasize percentage growth rather than absolute values.</li>
+      <li><strong>Affordability ratio:</strong> Add a third chart showing the ratio of Wage / CPI to measure relative affordability across cities.</li>
+      <li><strong>User interactivity:</strong> Add dropdown filters or city toggles to help viewers focus on specific city comparisons.</li>
+    </ul>
+  
+    <p>
+      Together, these comparisons help users better understand not just how much people earn in different cities, but also how far those earnings actually go when accounting for the cost of living.
+    </p>
+  </section>
+  
+
 
 
   <footer>
