--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
     </script>
 
   <section>
-    <h2>Section 1: Seattle Wages and Cost of Living – Data Summary & Visualization Goals</h2>
+    <h2>Write-up: Seattle Wages and Cost of Living – Data Summary & Visualization Goals</h2>
 
     <p>
       In this section, we explore the evolving economic conditions for residents of Seattle from 2015 to 2024, focusing on two key indicators: wages and the Consumer Price Index (CPI).
